<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/settings" />
    
    <item
		android:id="@+id/legal"
		android:orderInCategory="100"
		android:showAsAction="never"
		android:title="@string/legal"/>
    <item android:id="@+id/map" android:title="@string/map_button" android:icon="@android:drawable/ic_menu_mapmode" android:showAsAction="always"></item>
    <item android:id="@+id/search" android:title="@string/search_button" android:icon="@android:drawable/ic_menu_search" android:showAsAction="always"></item>
    <item android:id="@+id/sync" android:title="@string/sync_button" android:icon="@drawable/ic_menu_refresh" android:showAsAction="always"></item>
    <item android:id="@+id/check" android:title="@string/check_button" android:icon="@drawable/ic_menu_mark" android:showAsAction="always"></item>
</menu>